Fixed video to not overflow

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -32,9 +32,8 @@
 		min-height: 100%;
 		width: auto;
 		height: auto;
-		z-index: -100;
 		transform: translateX(-50%) translateY(-50%);
-		background: blue;
+		background: black;
 		background-size: cover;
 		transition: 1s opacity;
 		z-index: 0;
