--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -94,6 +94,7 @@ header {
 }
 
 .content {
+	position: relative;
 	background: #fff;
 }
 
